src/objects/Testtaker_Test_Result__c.object
<CustomObject>
    <description>Contains all the results for a particular test</description>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <description>When the test was initiated</description>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <referenceTo>Testtaker_Test__c</referenceTo>
        <relationshipLabel>Test Results</relationshipLabel>
        <relationshipName>Test_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Result</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Test Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>